--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 ---
 layout: post-index
 title: Latest Posts
-description: "Describe this nonsense."
-tags: [Jekyll, theme, themes, responsive, blog, modern]
+description: "hdmetor programming blog"
+tags: [python, machine lerarning, data analysis, blog]
 comments: false
 image:
   feature: abstract-1.jpg
